--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@
 
 <script src="scripts/dataObjectScript.js?v=202102122123"></script>
 <script src="scripts/utilityScript.js?v=202102131654"></script>
-<script src="scripts/dataReaderScript.js?v=202104302240"></script>
-<script src="scripts/chartScript.js?v=202102222109"></script>
+<script src="scripts/dataReaderScript.js?v=202105010027"></script>
+<script src="scripts/chartScript.js?v=202105010027"></script>
 <script>
-    chartFromPageSource("LA County", "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/los-angeles-county/index.html", 
-        "Los Angeles", "https://raw.githubusercontent.com/datadesk/california-coronavirus-data/master/cdph-hospital-patient-county-totals.csv", "MA");
+    chartFromPageSource(
+        "LA County", 
+        "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/los-angeles-county/index.html", 
+        "Los Angeles", 
+        "https://raw.githubusercontent.com/datadesk/california-coronavirus-data/master/cdph-hospital-patient-county-totals.csv", 
+        "https://raw.githubusercontent.com/datadesk/california-coronavirus-data/master/cdph-vaccination-county-totals.csv", 
+        "MA");
 
     function screenShot() {
         let t = getTimestampExt();
         printDiv("#chartDiv", "LA_NewCases", t); 
         setTimeout(() => {printDiv("#hospitalizationChartDiv", "LA_Hosp", t);}, 2000);
         setTimeout(() => {printDiv("#deathsChartDiv", "LA_NewDeaths", t);}, 2000);
+        setTimeout(() => {printDiv("#vaccinationChartDiv", "LA_Vaccinations", t);}, 2000);
     }
 
 </script> 
@@ -46,6 +52,7 @@
     <div class="page-container">
         <div>
             <div id="chartDiv" class="chartContent"></div>
+            <div id="vaccinationChartDiv" class="chartContent"></div>
             <div id="hospitalizationChartDiv" class="chartContent"></div>
             <div id="deathsChartDiv" class="chartContent"></div>
 
@@ -56,13 +63,23 @@
             <div class="radio-toolbar">
                 <input type="radio" id="radioMa" name="avgType"
                     value="MA" checked
-                    onclick='chartFromPageSource("LA County", "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/los-angeles-county/index.html", 
-                        "Los Angeles", "https://raw.githubusercontent.com/datadesk/california-coronavirus-data/master/cdph-hospital-patient-county-totals.csv", "MA");'>
+                    onclick='chartFromPageSource(
+                        "LA County", 
+                        "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/los-angeles-county/index.html", 
+                        "Los Angeles", 
+                        "https://raw.githubusercontent.com/datadesk/california-coronavirus-data/master/cdph-hospital-patient-county-totals.csv", 
+                        "https://raw.githubusercontent.com/datadesk/california-coronavirus-data/master/cdph-vaccination-county-totals.csv", 
+                        "MA");'>
                 <label for="radioMa">MA</label> 
                 <input type="radio"
                     id="radioEma" name="avgType" value="EMA"
-                    onclick='chartFromPageSource("LA County", "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/los-angeles-county/index.html", 
-                        "Los Angeles", "https://raw.githubusercontent.com/datadesk/california-coronavirus-data/master/cdph-hospital-patient-county-totals.csv", "EMA");'>
+                    onclick='chartFromPageSource(
+                        "LA County", 
+                        "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/los-angeles-county/index.html", 
+                        "Los Angeles", 
+                        "https://raw.githubusercontent.com/datadesk/california-coronavirus-data/master/cdph-hospital-patient-county-totals.csv", 
+                        "https://raw.githubusercontent.com/datadesk/california-coronavirus-data/master/cdph-vaccination-county-totals.csv", 
+                        "EMA");'>
                 <label for="radioEma">EMA</label>
             </div>
         </div>
