--- a/sanbernardino.html
+++ b/sanbernardino.html
@@ -6,20 +6,19 @@
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
-<link rel="stylesheet" href="styles/indexStyle.css?v=202201102021">
+<link rel="stylesheet" href="styles/indexStyle.css?v=202201122134">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="scripts/dom-to-image.min.js"></script>
 <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
 <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
 
-<script src="scripts/dataObjectScript.js?v=202102122123"></script>
-<script src="scripts/utilityScript.js?v=202102131654"></script>
-<script src="scripts/dataReaderScript.js?v=202109181304"></script>
-<script src="scripts/chartScript.js?v=202201102021"></script>
+<script src="scripts/dataObjectScript.js?v=202201122134"></script>
+<script src="scripts/utilityScript.js?v=202201122134"></script>
+<script src="scripts/dataReaderScript.js?v=202201122134"></script>
+<script src="scripts/chartScript.js?v=202201122134"></script>
 <script>
     chartFromPageSource(
-        "San Bernardino County",
         "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/san-bernardino-county/index.html",
         "San Bernardino",
         "https://raw.githubusercontent.com/datadesk/california-coronavirus-data/master/cdph-hospital-patient-county-totals.csv",
@@ -28,10 +27,10 @@
 
     function screenShot() {
         let t = getTimestampExt();
-        printDiv("#chartDiv", "SB_NewCases", t);
-        setTimeout(() => {printDiv("#hospitalizationChartDiv", "SB_Hosp", t);}, 2000);
-        setTimeout(() => {printDiv("#deathsChartDiv", "SB_NewDeaths", t);}, 2000);
-        setTimeout(() => {printDiv("#vaccinationChartDiv", "SB_Vaccinations", t);}, 2000);
+        printDiv("#chartArea", "SB_NewCases", t);
+        setTimeout(() => {printDiv("#hospitalizationChartArea", "SB_Hosp", t);}, 2000);
+        setTimeout(() => {printDiv("#deathsChartArea", "SB_NewDeaths", t);}, 2000);
+        setTimeout(() => {printDiv("#vaccinationChartArea", "SB_Vaccinations", t);}, 2000);
     }
 </script>
 </head>
@@ -50,10 +49,18 @@
 
     <div class="page-container">
         <div>
-            <div id="chartDiv" class="chartContent"></div>
-            <div id="vaccinationChartDiv" class="chartContent"></div>
-            <div id="hospitalizationChartDiv" class="chartContent"></div>
-            <div id="deathsChartDiv" class="chartContent"></div>
+            <div id="chartArea" class="chart-title">San Bernardino County New Cases by Day
+                <div id="chartDiv" class="chartContent"></div>
+            </div>
+            <div id="vaccinationChartArea" class="chart-title">San Bernardino County Vaccinations (Doses Adminstered Cummulative)
+                <div id="vaccinationChartDiv" class="chartContent"></div>
+            </div>
+            <div id="hospitalizationChartArea" class="chart-title">San Bernardino County Hospitalizations (Confirmed + Suspected) by Day
+                <div id="hospitalizationChartDiv" class="chartContent"></div>
+            </div>
+            <div id="deathsChartArea" class="chart-title">San Bernardino County New Deaths by Day
+                <div id="deathsChartDiv" class="chartContent"></div>
+            </div>
 
             Raw data from <a href="https://github.com/datadesk/california-coronavirus-data/blob/master/README.md">LA Times</a>
         </div>
@@ -63,7 +70,6 @@
                 <input type="radio" id="radioMa" name="avgType"
                     value="MA" checked
                     onclick='chartFromPageSource(
-                        "San Bernardino County",
                         "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/san-bernardino-county/index.html",
                         "San Bernardino",
                         "https://raw.githubusercontent.com/datadesk/california-coronavirus-data/master/cdph-hospital-patient-county-totals.csv",
@@ -73,7 +79,6 @@
                 <input type="radio"
                     id="radioEma" name="avgType" value="EMA"
                     onclick='chartFromPageSource(
-                        "San Bernardino County",
                         "https://www.latimes.com/projects/california-coronavirus-cases-tracking-outbreak/san-bernardino-county/index.html",
                         "San Bernardino",
                         "https://raw.githubusercontent.com/datadesk/california-coronavirus-data/master/cdph-hospital-patient-county-totals.csv",
